--- a/FXSTestBot/FXSTestBot.csproj
+++ b/FXSTestBot/FXSTestBot.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.10.0" />
+    <PackageReference Include="Telegram.Bot" Version="15.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
